@@ -1,3 +1,8 @@
+2013-09-02  Fabián Ezequiel Gallina  <fgallina@gnu.org>
+
+	* progmodes/python.el (python-shell-completion-get-completions):
+	Drop use of deleted `comint-last-prompt-overlay'.
+
 2013-09-01  Glenn Morris  <rgm@gnu.org>
 
 	* Makefile.in (setwins, setwins_almost, setwins_for_subdirs):
